refactor : project schema변경. 각 risk,strength,challenges, techDecision을 받도록. commit 헤더를 다 받은 뒤에 ignore처리하는 방식으로 변경.