@@ -19,23 +19,36 @@ import java.util.stream.Collectors;
 /**
  * git log --author 기반 본인 기여 추출 서비스.
  *
- * 추출 내용:
- *   - 본인이 수정한 파일 목록 (authoredFiles)
- *   - 커밋별 diff (ContributionDiff → RepoSummary 생성 시 증거 자료)
+ * <h3>주요 동작</h3>
+ * <ol>
+ *   <li>커밋 헤더(sha, subject, body) 전체를 한 번의 git log 호출로 수집</li>
+ *   <li>{@link CommitClassifier}로 IGNORED 커밋 제거</li>
+ *   <li>남은 커밋 중 상위 {@code maxCommits}개만 diff 조회</li>
+ * </ol>
  *
- * 주의:
- *   - GitHub primary email 1개만 사용한다 (설계 §2.3).
- *   - merge commit은 제외한다 (--no-merges).
- *   - diff 크기가 크면 토큰 예산 초과 → TokenBudgetEnforcer에서 잘라낸다.
+ * evidenceBullets / challenges / techDecisions 세분화는 AI에 위임한다.
+ * 이 서비스의 역할은 "소재 없는 커밋을 제거해 토큰 예산 내에 더 많은 실질 커밋을 담는 것"이다.
+ *
+ * <h3>주의</h3>
+ * <ul>
+ *   <li>GitHub primary email 1개만 사용 (설계 §2.3)</li>
+ *   <li>merge commit 제외 (--no-merges)</li>
+ *   <li>diff 1개 최대 크기: {@value #MAX_DIFF_CHARS} 문자</li>
+ * </ul>
  */
 @Service
 public class ContributionExtractorService {
 
     private static final Logger log = LoggerFactory.getLogger(ContributionExtractorService.class);
 
-    // diff 1개 최대 크기 (문자 수 기준, ~40KB)
     private static final int MAX_DIFF_CHARS = 40_000;
     private static final int GIT_TIMEOUT_SECONDS = 120;
+
+    private final CommitClassifier classifier;
+
+    public ContributionExtractorService(CommitClassifier classifier) {
+        this.classifier = classifier;
+    }
 
     /**
      * 본인이 수정한 파일 목록을 반환한다 (repo 루트 기준 상대 경로).
@@ -53,13 +66,10 @@ public class ContributionExtractorService {
         );
 
         String output = runGit(command, repoPath);
-
         Set<String> files = new LinkedHashSet<>();
         for (String line : output.split("\n")) {
             String trimmed = line.trim();
-            if (!trimmed.isEmpty()) {
-                files.add(trimmed);
-            }
+            if (!trimmed.isEmpty()) files.add(trimmed);
         }
 
         log.info("Found {} authored files for author={}", files.size(), authorEmail);
@@ -67,41 +77,42 @@ public class ContributionExtractorService {
     }
 
     /**
-     * 본인 커밋의 diff 목록을 반환한다.
-     * RepoSummary 생성 시 LLM에 기여 증거로 제공된다.
+     * IGNORED 커밋을 제거한 뒤 상위 {@code maxCommits}개의 diff를 반환한다.
      *
-     * @param maxCommits 최대 커밋 수 (토큰 예산 제한)
+     * <p>전략:
+     * <ol>
+     *   <li>커밋 헤더(sha/subject/body) 전체를 가볍게 수집</li>
+     *   <li>IGNORED 제거 (docs/chore/style/ci/test/build)</li>
+     *   <li>남은 커밋 상위 maxCommits개만 diff 조회 — 토큰 예산 준수</li>
+     * </ol>
+     *
+     * @param repoPath    로컬 클론 경로
+     * @param authorEmail 본인 GitHub primary email
+     * @param maxCommits  diff를 가져올 최대 커밋 수
      */
-    public List<DiffEntry> getContributionDiffs(Path repoPath, String authorEmail, int maxCommits) {
-        log.info("Extracting contribution diffs: repoPath={}, author={}, maxCommits={}",
+    public List<DiffEntry> getFilteredDiffs(Path repoPath, String authorEmail, int maxCommits) {
+        log.info("Fetching filtered diffs: repoPath={}, author={}, maxCommits={}",
                 repoPath, authorEmail, maxCommits);
 
-        // 1. 본인 커밋 SHA + subject 조회
-        List<String> logCommand = List.of(
-                "git", "log",
-                "--author=" + authorEmail,
-                "--no-merges",
-                "--format=%h %s",
-                "-n", String.valueOf(maxCommits)
-        );
-        String logOutput = runGit(logCommand, repoPath);
+        // 1. 커밋 헤더 전체 수집 (diff 없음 — 가볍다)
+        List<CommitHeader> headers = getAllCommitHeaders(repoPath, authorEmail);
+        log.info("Total commits for author={}: {}", authorEmail, headers.size());
 
+        // 2. IGNORED 제거 후 상위 maxCommits 선택
+        List<CommitHeader> included = headers.stream()
+                .filter(h -> classifier.classify(h.subject()) == CommitCategory.INCLUDED)
+                .limit(maxCommits)
+                .toList();
+
+        log.info("After IGNORED filter: {} → {} commits (limit={})",
+                headers.size(), included.size(), maxCommits);
+
+        // 3. diff 조회
         List<DiffEntry> diffs = new ArrayList<>();
-        for (String line : logOutput.split("\n")) {
-            String trimmed = line.trim();
-            if (trimmed.isEmpty()) continue;
-
-            int spaceIdx = trimmed.indexOf(' ');
-            if (spaceIdx < 0) continue;
-            String sha = trimmed.substring(0, spaceIdx);
-            String subject = trimmed.substring(spaceIdx + 1);
-
-            // 2. 커밋별 diff 조회
-            String diff = getCommitDiff(repoPath, sha);
-            diffs.add(new DiffEntry(sha, subject, diff));
+        for (CommitHeader h : included) {
+            diffs.add(new DiffEntry(h.sha(), h.subject(), h.body(), getCommitDiff(repoPath, h.sha())));
         }
 
-        log.info("Extracted {} diffs for author={}", diffs.size(), authorEmail);
         return diffs;
     }
 
@@ -109,19 +120,46 @@ public class ContributionExtractorService {
     // 내부 유틸
     // ─────────────────────────────────────────────────
 
-    private String getCommitDiff(Path repoPath, String sha) {
-        List<String> command = Arrays.asList(
-                "git", "diff", sha + "^", sha
+    /**
+     * git log에서 SHA + subject + body를 전체 수집한다.
+     * NUL(x00) / US(x1f) 구분자로 멀티라인 body를 안전하게 파싱한다.
+     * 포맷: %x00%h%x1f%s%x1f%b
+     */
+    private List<CommitHeader> getAllCommitHeaders(Path repoPath, String authorEmail) {
+        List<String> command = List.of(
+                "git", "log",
+                "--author=" + authorEmail,
+                "--no-merges",
+                "--format=%x00%h%x1f%s%x1f%b"
         );
+
+        String raw = runGit(command, repoPath);
+        List<CommitHeader> headers = new ArrayList<>();
+
+        for (String record : raw.split("\0")) {
+            if (record.isBlank()) continue;
+            String[] parts = record.split("\u001f", 3);
+            String sha     = parts[0].trim();
+            String subject = parts.length > 1 ? parts[1].trim() : "";
+            String body    = parts.length > 2 ? parts[2].trim() : "";
+
+            if (!sha.isEmpty() && !subject.isEmpty()) {
+                headers.add(new CommitHeader(sha, subject, body));
+            }
+        }
+
+        return headers;
+    }
+
+    private String getCommitDiff(Path repoPath, String sha) {
+        List<String> command = Arrays.asList("git", "diff", sha + "^", sha);
         try {
             String diff = runGit(command, repoPath);
-            // 크기 제한
             if (diff.length() > MAX_DIFF_CHARS) {
                 return diff.substring(0, MAX_DIFF_CHARS) + "\n... [truncated]";
             }
             return diff;
         } catch (Exception e) {
-            // 최초 커밋(parent 없음) 등의 경우 graceful fallback
             List<String> showCommand = List.of("git", "show", "--stat", sha);
             try {
                 return runGit(showCommand, repoPath);
@@ -140,7 +178,6 @@ public class ContributionExtractorService {
 
             Process process = pb.start();
 
-            // stdout 읽기
             String output;
             try (BufferedReader reader = new BufferedReader(
                     new InputStreamReader(process.getInputStream()))) {
@@ -162,4 +199,6 @@ public class ContributionExtractorService {
             return "";
         }
     }
+
+    private record CommitHeader(String sha, String subject, String body) {}
 }
